add getKPI API
